<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="login_button">Already Registered? <b>Login Here</b></string>
    <string name="register_button">Dont have an account? <b>Register Here</b></string>
    <string name="category_numbers">Numbers</string>
    <string name="category_family">Family </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count">Nothing is selected</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Speak</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="exit">LogOut</string>
    <string name="Profile">Profile</string>
    <string name="hello">Hello There</string>
    <string name="enter_car_information">Enter Car Information</string>
    <string name="number">Number:</string>
    <string name="number_plate_info">Number Plate info</string>
    <string name="name">Name:</string>
    <string name="company_name">Company Name</string>
    <string name="model_number">Model Number:</string>
    <string name="model_number_of_car">Model Number of Car</string>
    <string name="cc">CC:</string>
    <string name="cc_data">CC Data</string>
    <string name="color_of_car">Color of Car</string>
    <string name="manufacturing_date">Manufacturing date:</string>
    <string name="date_of_manufacture">Date of Manufacture</string>
    <string name="owner">Owner:</string>
    <string name="owner_name">Owner Name</string>
    <string name="address">Address:</string>
    <string name="owner_contact_information">Owner Contact Information</string>
    <string name="contact">Contact:</string>
    <string name="owner_contact_number">Owner Contact Number</string>
    <string name="occupation">Occupation:</string>
    <string name="owner_occupation">Owner Occupation</string>
    <string name="save">Save</string>
    <string name="update_car_information">Update Car Information</string>
    <string name="color">Color:</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="capture_image">Capture Image</string>
    <string name="hi_there_welcome">Hi There, Welcome</string>
    <string name="add_data">Add data</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="selected_car_details">SELECTED CAR DETAILS</string>
</resources>