<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/selected_car_details"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NumberPlate"
                    android:layout_width="387dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_bg"
                    android:paddingTop="11dp"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/name"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/CName1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/company_name"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/model_number"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp">

                    <TextView
                        android:id="@+id/ID1"
                        android:layout_width="276dp"
                        android:layout_height="41dp"
                        android:hint="@string/model_number_of_car"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/modelNumber1"
                        android:layout_width="276dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/model_number_of_car"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/cc"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ccInfo1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/cc_data"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/color"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/colorInfo1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/color_of_car"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/manufacturing_date"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ManufactureDate1"
                        android:layout_width="276dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/date_of_manufacture"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/owner"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ownerName1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/owner_name"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/address"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ownerContactInfo1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/owner_contact_information"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/contact"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ownerPhoneNo1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/owner_contact_number"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/occupation"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/ownerOccupation1"
                        android:layout_width="287dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/owner_occupation"
                        android:padding="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/activity_care_detail_back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="160dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="160dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorAccent1"
                        android:text="@string/back"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#ffffff" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>